intégration de SOLID. (wip)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,7 @@
         <div class="row footer-information">
             <div class="col-lg-4 footer-column">
                 <h4>A propos</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s.</p>
+                <p>Pierre Baron est ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
             </div>
             <div class="col-lg-4 footer-column">
                 <h4>Socialisons nous</h4>
