--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="tagline-title">{{page.tagline}}</h3>
+                <div class="tagline-title">{{page.tagline}}</div>
             </div>
         </div>
         <!-- .row -->
