--- a/_sass/solid/_original.scss
+++ b/_sass/solid/_original.scss
@@ -26,7 +26,7 @@ body {
   margin: 0;
   height: 100%;
   color: #384452;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans','Lato', sans-serif;
   font-weight: 400;
 }
 
