--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,8 +1,8 @@
 @import "compass";
-@import "variables";
+@import "solid/variables";
 @import "bootstrap-3.1.1/bootstrap";
 @import "font-awesome-4.1.0/font-awesome";
-@import "solid/theme";
+//@import "solid/theme";
 @import "solid/navbar";
 @import "solid/tagline";
 @import "solid/sections";
