mise à jour style

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -22,7 +22,7 @@
                 <p><b>Date : </b> {{ page.duration }}</p>
                 {% endif %}
 
-                <p><b>Compétences:</b> {{ page.skills }}</p>
+                <p><b>i.fa.fa-flask</b> {{ page.skills }}</p>
             </div>
             <div class="col-sm-6">
                 {% if page.demo %}
