--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -3,8 +3,10 @@
 @import "bootstrap-3.1.1/bootstrap";
 @import "font-awesome-4.1.0/font-awesome";
 //@import "solid/theme";
+@import "solid/type";
 @import "solid/navbar";
 @import "solid/tagline";
 @import "solid/sections";
 @import "solid/skills";
+@import "solid/works";
 @import "solid/footer";
