--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer footer-inverse">
     <div class="container">
         <div class="row footer-information">
-            <div class="col-lg-4 footer-column">
-                <h4>A propos</h4>
+            <div class="col-md-6">
+                <h4 class="title-underline title-default">A propos</h4>
                 <p>Pierre Baron est ingénieur informaticien spécialisé en domotique et services à l'habitat.</p>
             </div>
-            <div class="col-lg-4 footer-column">
-                <h4>Socialisons nous</h4>
+            <div class="col-md-6">
+                <h4 class="title-underline title-default">Socialisons nous</h4>
                 <p>
                     <a href="mailto:prbaron22@gmail.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="skype:prbaron"><i class="fa fa-skype"></i></a>
@@ -14,15 +14,6 @@
                     <a href="https://github.com/prbaron"><i class="fa fa-github-alt"></i></a>
                 </p>
             </div>
-            <div class="col-lg-4 footer-column">
-                <h4>Hi</h4>
-                <p>
-                    Some Ave, 987,<br/>
-                    23890, New York,<br/>
-                    United States.<br/>
-                </p>
-            </div>
-
         </div>
         <!--.row -->
         <div class="row footer-copyright">
