--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,25 +42,17 @@
     </div>
     <div class="col-md-4">
         <h4>Categories</h4>
+            {% assign sorted_array = site.categories | sort %}
+            {% for category in sorted_array %}
+            <p>
+                <span class="badge pull-right">{{ category| first | size}}</span>
 
-        <div class="hline"></div>
-        <p><a href="#"><i class="fa fa-angle-right"></i> Wordpress</a> <span
-                class="badge badge-theme pull-right">9</span></p>
-
-        <p><a href="#"><i class="fa fa-angle-right"></i> Photoshop</a> <span
-                class="badge badge-theme pull-right">3</span></p>
-
-        <p><a href="#"><i class="fa fa-angle-right"></i> Web Design</a> <span
-                class="badge badge-theme pull-right">11</span></p>
-
-        <p><a href="#"><i class="fa fa-angle-right"></i> Development</a> <span
-                class="badge badge-theme pull-right">5</span></p>
-
-        <p><a href="#"><i class="fa fa-angle-right"></i> Tips & Tricks</a> <span
-                class="badge badge-theme pull-right">7</span></p>
-
-        <p><a href="#"><i class="fa fa-angle-right"></i> Code Snippets</a> <span
-                class="badge badge-theme pull-right">12</span></p>
+                <a href="{{site.url}}/categories/{{ category| first }}.html">
+                    <i class="fa fa-angle-right"></i> {{ category| first }}
+                </a>
+            </p>
+            {% endfor %}
+        </ul>
     </div>
 </div>
 
@@ -69,13 +61,6 @@
 {% include analytics.html %}
 
 <script src="/js/vendor.all.js"></script>
-<script>
-    // removes line numbers from Highlight tag in Jekyll;
-    var lines = document.getElementsByClassName('lineno');
-    for (var i = 0; i < lines.length; i++) {
-        lines[i].innerHTML = "";
-    }
-</script>
 
 </body>
 </html>
