--- a/_sass/solid/_sections.scss
+++ b/_sass/solid/_sections.scss
@@ -1,3 +1,10 @@
-.section-title {
-    text-align : center;
+.section {
+    padding-bottom : 60px;
+    padding-top    : 60px;
+
+    .section-title {
+        margin-bottom : 30px;
+        text-align    : center;
+
+    }
 }
