--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -6,11 +6,15 @@
 {% include header.html %}
 {% include tagline.html %}
 
-<div class="container">
-    <div class="col-sm-12">
-        {{ content }}
+<section class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                {{ content }}
+            </div>
+        </div>
     </div>
-</div>
+</section>
 
 {% include footer.html %}
 
