--- a/_sass/solid/_mixins.scss
+++ b/_sass/solid/_mixins.scss
@@ -2,8 +2,54 @@
     @font-face {
         font-family : $family;
         src         : url('#{$src}.eot'); // IE9 compat
-        src         : url('#{$src}.eot?#iefix') format('embedded-opentype'), // IE8 and below url('#{$src}.woff') format('woff'), // standards url('#{$src}.ttf') format('truetype'), // Safari, Android, iOS url('#{$src}.svg##{$family}') format('svg'); // legacy iOS
-        font-style  : $style;
+        src         : url('#{$src}.eot?#iefix') format('embedded-opentype'), // IE8 and below
+                      url('#{$src}.woff') format('woff'), // standards
+                      url('#{$src}.ttf') format('truetype'), // Safari, Android, iOS
+                      url('#{$src}.svg##{$family}') format('svg'); // legacy iOS
+    font-style  : $style;
         font-weight : $weight;
+    }
+}
+
+// Button variants
+//
+// Easily pump out default styles, as well as :hover, :focus, :active,
+// and disabled options for all buttons
+
+@mixin button-variant-ghost($color, $background, $border) {
+    color            : $border;
+    background-color : transparent;
+    border-color     : $border;
+
+    &:hover,
+    &:focus,
+    &:active,
+    &.active,
+    .open > &.dropdown-toggle {
+        color            : $color;
+        background-color : darken($background, 10%);
+        border-color     : darken($border, 12%);
+    }
+    &:active,
+    &.active,
+    .open > &.dropdown-toggle {
+        background-image : none;
+    }
+    &.disabled,
+    &[disabled],
+    fieldset[disabled] & {
+        &,
+        &:hover,
+        &:focus,
+        &:active,
+        &.active {
+            background-color : $background;
+            border-color     : $border;
+        }
+    }
+
+    .badge {
+        color            : $background;
+        background-color : $color;
     }
 }
