--- a/_sass/solid/_variables.scss
+++ b/_sass/solid/_variables.scss
@@ -12,11 +12,11 @@ $fa-font-path:        "/fonts/font-awesome-4.1.0";
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$gray-darker:            #434a54;
-$gray-dark:              #656d78;
+$gray-darker:            #333;
+$gray-dark:              #404040;
 $gray:                   #ccd1d9;
 $gray-light:             #e6e9ed;
-$gray-lighter:           #f5f7fa;
+$gray-lighter:           #f0f0f0;
 
 $brand-primary:         #4fc1e9;
 $brand-success:         #a0d468;
@@ -25,7 +25,7 @@ $brand-danger:          #ed5565;
 $brand-info:            #5d9cec;
 
 
-$footer-color : transparentize(adjust-color($gray-light, $red : -15, $blue: 15), 0.3);
+$footer-color : rgba(255,255,255, 0.6);
 
 //== Scaffolding
 //
@@ -34,7 +34,7 @@ $footer-color : transparentize(adjust-color($gray-light, $red : -15, $blue: 15),
 //** Background color for `<body>`.
 $body-bg:               #fefefe;
 //** Global text color on `<body>`.
-$text-color:            $gray-dark;
+$text-color:            #656d78;
 
 //** Global textual link color.
 $link-color:            $brand-primary;
@@ -350,12 +350,12 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px;
 
 $navbar-default-color:             #fff;
-$navbar-default-bg:                $gray-darker;
+$navbar-default-bg:                $brand-primary;
 $navbar-default-border:            transparent;
 
 // Navbar links
 $navbar-default-link-color:                #fff;
-$navbar-default-link-hover-color:          $link-color;
+$navbar-default-link-hover-color:          $gray-dark;
 $navbar-default-link-hover-bg:             transparent;
 $navbar-default-link-active-color:         $navbar-default-link-hover-color;
 $navbar-default-link-active-bg:            transparent;
