--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -3,10 +3,16 @@
 @import "bootstrap-3.1.1/bootstrap";
 @import "font-awesome-4.1.0/font-awesome";
 //@import "solid/theme";
+
+@import "solid/mixins";
+@import "solid/buttons";
+
 @import "solid/type";
 @import "solid/navbar";
 @import "solid/tagline";
 @import "solid/sections";
 @import "solid/skills";
 @import "solid/works";
+@import "solid/posts";
+@import "solid/contact";
 @import "solid/footer";
