--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,7 @@
 <ul class="nav navbar-nav">
     {% for link in site.navigation %}
     {% assign current = nil %}
-    {% assign currentPage = page.url | remove: 'index.html' %}
-    {% if currentPage == link.url or page.layout == link.layout %}
+    {% if link.text == page.menu %}
     {% assign current = 'active' %}
     {% endif %}
     <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
