--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
 <body>
 
 {% include header.html %}
-{% include tagline.html %}
 
 {{ content }}
 
@@ -13,6 +12,7 @@
 {% include analytics.html %}
 
 <script src="/js/vendor.all.js"></script>
-
+<script src="/js/prettify/prettify.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
