--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
+<script>
+
+</script>
 <body>
 
 {% include header.html %}
-{% include tagline.html %}
 
 <section class="section">
     <div class="container">
-        <div class="col-md-8">
-            <p><img class="img-responsive" src=""></p>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="post">
+                    <p class="post-subtitle">
+                        <i class="fa fa-clock-o"></i> {{ page.date | date: '%d/%m/%Y' }} |
+                        <i class="fa fa-user"></i>{% if page.author%}
+                        {{ page.author}}
+                        {% else %}
+                        Pierre Baron
+                        {% endif %}
+                    </p>
+                    {% if page.demo || page.download %}
+                    <div class="post-actions">
+                        <ul>
+                            {% if page.demo %}
+                            <li><a href="{{page.demo}}" class="btn btn-primary">Démonstration</a></li>
+                            {% endif %}
+                            {% if page.download %}
+                            <li><a href="{{page.download}}" class="btn btn-ghost btn-default">Sources</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
 
-            <p><i class="fa fa-clock-o"></i> {{ page.date | date: '%d/%m/%Y' }}</p>
-
-            <p><i class="fa fa-user"></i>
-                {% if page.author%} {{ page.author}}
-                {% else %} Pierre Baron {% endif %}
-            </p>
-
-            {% if page.demo || page.download %}
-            <div class="actions">
-                <ul>
-                    {% if page.demo %}
-                    <li><a href="{{page.demo}}" class="btn btn-primary">Démonstration</a></li>
                     {% endif %}
-                    {% if page.download %}
-                    <li><a href="{{page.download}}" class="btn btn-default">Sources</a></li>
+
+                    {% if page.note %}
+                    <div class="callout callout-warning">
+                        {{page.note}}
+                    </div>
                     {% endif %}
-                </ul>
+
+                    {{ content }}
+
+                    {% if page.comments %}
+                    <div class="disqus">
+                        {% include disqus.html %}
+                    </div>
+                    {% endif %}
+                </div>
+                <!-- .post -->
             </div>
-
-            {% endif %}
-
-            {% if page.note %}
-            <div class="callout callout-warning">
-                {{page.note}}
+            <!-- .col -->
+            <div class="col-md-4">
+                {% include categories.html %}
             </div>
-            {% endif %}
-
-            {{ content }}
-
-            {% if page.comments %}
-            <div class="disqus">
-                {% include disqus.html %}
-            </div>
-            {% endif %}
+            <!-- .col -->
         </div>
-        <div class="col-md-4">
-            {% include categories.html %}
-        </div>
+        <!-- .row -->
     </div>
+    <!-- .container -->
 </section>
 
 {% include footer.html %}
@@ -57,6 +67,7 @@
 {% include analytics.html %}
 
 <script src="/js/vendor.all.js"></script>
-
+<script src="/js/prettify/prettify.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
