--- a/_sass/solid/_tagline.scss
+++ b/_sass/solid/_tagline.scss
@@ -7,10 +7,11 @@
         font-weight : 500;
         font-size   : 3em;
         text-align  : center;
+        text-shadow : 0 1px 0 rgba(0, 0, 0, .3), 0 2px 0 rgba(0, 0, 0, .1);
     }
 
     &.tagline-primary {
-        background : $brand-primary;
+        background : transparentize($brand-primary, 0.5);
 
         .tagline-title {
             color : white;
