--- a/_sass/solid/_type.scss
+++ b/_sass/solid/_type.scss
@@ -13,6 +13,6 @@ body {
 }
 
 .title-inverse {
-    color               : $gray-darker;
-    border-bottom-color : $gray-darker;
+    color               : $gray-dark;
+    border-bottom-color : $gray-dark;
 }
