--- a/_sass/solid/_mixins.scss
+++ b/_sass/solid/_mixins.scss
@@ -2,11 +2,11 @@
     @font-face {
         font-family : $family;
         src         : url('#{$src}.eot'); // IE9 compat
-        src         : url('#{$src}.eot?#iefix') format('embedded-opentype'), // IE8 and below
-                      url('#{$src}.woff') format('woff'), // standards
-                      url('#{$src}.ttf') format('truetype'), // Safari, Android, iOS
-                      url('#{$src}.svg##{$family}') format('svg'); // legacy iOS
-    font-style  : $style;
+        src         : url('#{$src}.eot?#iefix') format('embedded-opentype'),
+        url('#{$src}.woff') format('woff'),
+        url('#{$src}.ttf') format('truetype'),
+        url('#{$src}.svg##{$family}') format('svg');
+        font-style  : $style;
         font-weight : $weight;
     }
 }
@@ -19,7 +19,7 @@
 @mixin button-variant-ghost($color, $background, $border) {
     color            : $border;
     background-color : transparent;
-    border-color     : $border;
+    border           : 2px solid $border;
 
     &:hover,
     &:focus,
@@ -27,13 +27,14 @@
     &.active,
     .open > &.dropdown-toggle {
         color            : $color;
-        background-color : darken($background, 10%);
-        border-color     : darken($border, 12%);
+        background-color : $border;
+        border-color     : $border;
     }
     &:active,
     &.active,
     .open > &.dropdown-toggle {
-        background-image : none;
+        background-color : darken($border, 12%);
+        border-color     : darken($border, 12%);
     }
     &.disabled,
     &[disabled],
