--- a/_sass/solid/_navbar.scss
+++ b/_sass/solid/_navbar.scss
@@ -2,12 +2,63 @@
     border : none;
 }
 
+.navbar-brand {
+    padding            : 8.5px 15px;
+
+    img {
+        background         : rgba(0, 0, 0, .1);
+        border-radius      : 25em;
+        vertical-align     : middle;
+        height             : 48px;
+        margin-right       : 4px;
+        -webkit-transition : background 0.3s ease-in-out;
+        -moz-transition    : background 0.3s ease-in-out;
+        transition         : background 0.3s ease-in-out;
+    }
+    -webkit-transition : color 0.3s ease-in-out;
+    -moz-transition    : color 0.3s ease-in-out;
+    transition         : color 0.3s ease-in-out;
+
+    &:hover {
+        color              : rgba(0, 0, 0, .5);
+        img {
+            background         : rgba(0, 0, 0, .5);
+            -webkit-transition : background 0.3s ease-in-out;
+            -moz-transition    : background 0.3s ease-in-out;
+            transition         : background 0.3s ease-in-out;
+        }
+        -webkit-transition : color 0.3s ease-in-out;
+        -moz-transition    : color 0.3s ease-in-out;
+        transition         : color 0.3s ease-in-out;
+    }
+}
+
 .navbar-nav {
     li > a {
-        border-top : 5px solid transparent;
+        border-bottom      : 5px solid transparent;
+        border-top         : none;
+        -webkit-transition : color 0.3s ease-in-out;
+        -moz-transition    : color 0.3s ease-in-out;
+        transition         : color 0.3s ease-in-out;
+
+        &:hover {
+            -webkit-transition : color 0.3s ease-in-out;
+            -moz-transition    : color 0.3s ease-in-out;
+            transition         : color 0.3s ease-in-out;
+        }
+
+        @media (min-width : $grid-float-breakpoint) {
+            border-top    : 5px solid transparent;
+            border-bottom : none;
+        }
     }
     .active > a {
-        border-top-color : $navbar-default-link-hover-color;
+        border-bottom-color : $navbar-default-link-hover-color;
+        font-weight         : bold;
+
+        @media (min-width    : $grid-float-breakpoint) {
+            border-top-color : $navbar-default-link-hover-color;
+        }
     }
 }
 
@@ -53,10 +104,10 @@
             @include transform(translateY(-6px) rotate(0deg));
         }
         .icon-bar:nth-child(2) {
-             -webkit-transition : -webkit-transform 0.15s, opacity 0.15s;
-        -moz-transition    : -moz-transform 0.15s, opacity 0.15s;
-        transition         : transform 0.15s, opacity 0.15s;
-            opacity : 1;
+            -webkit-transition : -webkit-transform 0.15s, opacity 0.15s;
+            -moz-transition    : -moz-transform 0.15s, opacity 0.15s;
+            transition         : transform 0.15s, opacity 0.15s;
+            opacity            : 1;
             @include transform(translateX(0px));
         }
         .icon-bar:last-child {
