--- a/_sass/solid/_posts.scss
+++ b/_sass/solid/_posts.scss
@@ -13,8 +13,23 @@
     }
 
     .post-subtitle {
-        color     : transparentize($gray-dark, 0.7);
+        color     : transparentize($gray-dark, 0.5);
         font-size : 0.75em;
+    }
+
+    .post-actions {
+        margin     : 30px 0;
+        text-align : center;
+        ul {
+            padding-left : 0;
+        }
+        li {
+            display    : inline-block;
+            list-style : none;
+        }
+        li:first-child {
+            margin-right : 20px;
+        }
     }
 
     .post-readmore {
