--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -6,7 +6,10 @@
 
 @import "solid/mixins";
 @import "solid/buttons";
+@import "solid/prettify";
+@import "solid/pagination";
 
+@import "solid/header";
 @import "solid/type";
 @import "solid/navbar";
 @import "solid/tagline";
