intégration de SOLID. (wip)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,7 @@
+---
+menu : BLOG
+---
+
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
@@ -36,7 +40,7 @@
                     {% endif %}
 
                     {% if page.note %}
-                    <div class="callout callout-warning">
+                    <div class="alert alert-warning">
                         {{page.note}}
                     </div>
                     {% endif %}
