--- a/_sass/solid/_sections.scss
+++ b/_sass/solid/_sections.scss
@@ -8,3 +8,11 @@
 
     }
 }
+
+.section-skills {
+    background : $gray-lighter;
+
+//    [class*="col-"]:not(:last-child) {
+//        margin-bottom : 60px;
+//    }
+}
