--- a/_sass/solid/_works.scss
+++ b/_sass/solid/_works.scss
@@ -10,3 +10,11 @@
         font-size : $font-size-base;
     }
 }
+
+.work-detail {
+    margin-top : 30px;
+
+    @media (min-width : $screen-sm-min) {
+        margin-top    : 0px;
+    }
+}
