--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -2,7 +2,6 @@
 @import "solid/variables";
 @import "bootstrap-3.1.1/bootstrap";
 @import "font-awesome-4.1.0/font-awesome";
-//@import "solid/theme";
 @import "solid/mixins";
 @import "solid/alerts";
 @import "solid/buttons";
@@ -17,4 +16,5 @@
 @import "solid/works";
 @import "solid/posts";
 @import "solid/contact";
+@import "solid/widgets";
 @import "solid/footer";
