--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,13 +1,15 @@
-<h4 class="title-underline title-inverse">Categories</h4>
+<div class="widget-categories">
+    <h4 class="title-underline title-inverse">Categories</h4>
 
-{% assign sorted_array = site.categories | sort %}
-{% for category in sorted_array %}
-<p>
-    <span class="badge pull-right">{{ category| first | size}}</span>
+    {% assign sorted_array = site.categories | sort %}
+    {% for category in sorted_array %}
+    <p>
+        <span class="badge pull-right">{{ category | first | size}}</span>
 
-    <a href="{{site.url}}/categories/{{ category| first }}.html">
-        <i class="fa fa-angle-right"></i> {{ category| first }}
-    </a>
-</p>
-{% endfor %}
-</ul>
+        <a href="{{site.url}}/categories/{{ category | first }}.html">
+            <i class="fa fa-angle-right"></i> {{ category| first }}
+        </a>
+    </p>
+    {% endfor %}
+    </ul>
+</div>
