--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -21,5 +21,6 @@
 
 <script src="/js/vendor.all.js"></script>
 <script src="/js/wufoo.min.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
