--- a/_sass/solid/_footer.scss
+++ b/_sass/solid/_footer.scss
@@ -4,11 +4,11 @@
     }
 
     i {
-        font-size : 30px;
+        font-size : $grid-gutter-width;
     }
 
     [class*="col-"]:not(:last-child) {
-        margin-bottom : 30px;
+        margin-bottom : $grid-gutter-width;
 
         @media (min-width : $screen-md-min) {
             margin-bottom : 0px;
@@ -18,12 +18,13 @@
 }
 
 .footer-information {
-    padding-top    : 60px;
-    padding-bottom : 30px;
+    padding-top    : $grid-gutter-width * 2;
+    padding-bottom : $grid-gutter-width;
 }
 
 .footer-copyright {
     padding : $line-height-base*1em 0;
+
     p {
         margin-bottom : 0;
     }
