--- a/_sass/solid/_posts.scss
+++ b/_sass/solid/_posts.scss
@@ -1,6 +1,6 @@
 .post {
-    padding-top    : 30px;
-    padding-bottom : 30px;
+    padding-top    : $grid-gutter-width;
+    padding-bottom : $grid-gutter-width;
     word-warp      : break-all;
 
     &:first-of-type {
@@ -18,7 +18,7 @@
     }
 
     .post-actions {
-        margin     : 30px 0;
+        margin     : $grid-gutter-width 0;
         text-align : center;
         ul {
             padding-left : 0;
@@ -33,11 +33,11 @@
     }
 
     .post-readmore {
-        margin-top : 30px;
+        margin-top : $grid-gutter-width;
         text-align : center;
     }
 }
 
 .disqus {
-    margin-top : 30px;
+    margin-top : $grid-gutter-width * 2;
 }
