--- a/_sass/solid/_tagline.scss
+++ b/_sass/solid/_tagline.scss
@@ -1,6 +1,6 @@
 .tagline {
-    padding-top    : 60px;
-    padding-bottom : 60px;
+    padding-top    : $grid-gutter-width * 2;
+    padding-bottom : $grid-gutter-width * 2;
 
     .tagline-title {
         font-family : "Mir-Medium", Kreon, sans-serif;
