--- a/_sass/solid/_works.scss
+++ b/_sass/solid/_works.scss
@@ -1,5 +1,6 @@
 .work {
-    margin-bottom : 60px;
+    margin-bottom : $grid-gutter-width * 2;
+
     &:last-child {
         margint-bottom : 0;
     }
@@ -12,7 +13,7 @@
 }
 
 .work-detail {
-    margin-top : 30px;
+    margin-top : $grid-gutter-width;
 
     @media (min-width : $screen-sm-min) {
         margin-top    : 0px;
