--- a/_sass/solid/_header.scss
+++ b/_sass/solid/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background              : url(/img/gradient2.jpg) fixed;
+    background              : url(/img/gradient.jpg) fixed;
     position                : relative;
     -webkit-background-size : cover; /* pour Chrome et Safari */
     -moz-background-size    : cover; /* pour Firefox */
