--- a/_sass/solid/_variables.scss
+++ b/_sass/solid/_variables.scss
@@ -185,7 +185,7 @@ $input-bg:                       #fff;
 $input-bg-disabled:              $gray-lighter;
 
 //** Text color for `<input>`s
-$input-color:                    $gray;
+$input-color:                    $text-color;
 //** `<input>` border color
 $input-border:                   #ccc;
 //** `<input>` border radius
