--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -4,7 +4,7 @@
     {% assign sorted_array = site.categories | sort %}
     {% for category in sorted_array %}
     <p>
-        <span class="badge pull-right">{{ category | first | size}}</span>
+        <span class="badge pull-right">{{ category[1] | size}}</span>
 
         <a href="{{site.url}}/categories/{{ category | first }}.html">
             <i class="fa fa-angle-right"></i> {{ category| first }}
