--- a/css/style.scss
+++ b/css/style.scss
@@ -2,22 +2,8 @@
 ---
 
 @import "../_sass/prbaron/mixins";
-
 @import "../_sass/prbaron/variables";
 @import "../_sass/bootstrap-3.1.1/bootstrap";
 @import "../_sass/font-awesome-4.1.0/font-awesome";
-@import "../_sass/prbaron/alerts";
-@import "../_sass/prbaron/buttons";
-@import "../_sass/prbaron/highlighter";
-@import "../_sass/prbaron/pagination";
-@import "../_sass/prbaron/header";
-@import "../_sass/prbaron/type";
-@import "../_sass/prbaron/navbar";
-@import "../_sass/prbaron/tagline";
-@import "../_sass/prbaron/sections";
-@import "../_sass/prbaron/skills";
-@import "../_sass/prbaron/works";
-@import "../_sass/prbaron/posts";
-@import "../_sass/prbaron/contact";
-@import "../_sass/prbaron/widgets";
-@import "../_sass/prbaron/footer";
+
+@import "../_sass/prbaron/prbaron";
