--- a/_sass/prbaron/_tagline.scss
+++ b/_sass/prbaron/_tagline.scss
@@ -5,9 +5,14 @@
     .tagline-title {
         font-family : "Mir-Medium", Kreon, sans-serif;
         font-weight : 500;
-        font-size   : 3em;
+        font-size   : 2.5em;
         text-align  : center;
         text-shadow : 0 1px 0 rgba(0, 0, 0, .3), 0 2px 0 rgba(0, 0, 0, .1);
+
+        @media (min-width : $screen-sm-min) {
+            font-size     : 3em;
+
+        }
     }
 
     &.tagline-primary {
