added tuto_deploy_yeoman_angular_heroku to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ menu : BLOG
 <section class="section">
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-sm-12">
                 <div class="post">
                     <p class="post-subtitle">
                         <i class="fa fa-clock-o"></i> {{ page.date | date: '%d/%m/%Y' }} |
@@ -54,10 +54,6 @@ menu : BLOG
                     {% endif %}
                 </div>
                 <!-- .post -->
-            </div>
-            <!-- .col -->
-            <div class="col-md-4">
-                {% include categories.html %}
             </div>
             <!-- .col -->
         </div>
