add resume + update style for footer + update type for menu

--- a/_sass/prbaron/_sections.scss
+++ b/_sass/prbaron/_sections.scss
@@ -12,3 +12,12 @@
 .section-skills {
     background : $gray-lighter;
 }
+
+.resume {
+	margin-top : $grid-gutter-width * 2;
+	margin-bottom: 0;
+
+	a:first-child {
+		margin-right: $grid-gutter-width / 2;
+	}
+}
