--- a/_sass/prbaron/_type.scss
+++ b/_sass/prbaron/_type.scss
@@ -2,6 +2,10 @@ body {
     font-weight : 300;
 }
 
+b, strong {
+	font-weight: 600;
+}
+
 .title-underline {
     border-bottom  : 2px solid transparent;
     padding-bottom : 10px;
